checker/tests/parsing/errors/missing_semicolon.mft
trait Foo {
  value: Bar
}
=== error ===
Unrecognized token `}` found at 25:26
Expected one of ";"